--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ authors = ["Tom MacWright <tom@macwright.org>"]
 repository = "https://github.com/tmcw/rust-polyline"
 readme = "README.md"
 keywords = ["polyline", "geo"]
+license = "ISC"
 
 [dependencies]
