--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "polyline"
+description = "Encoder and decoder for the Google Encoded Polyline format"
 version = "0.1.0"
 authors = ["Tom MacWright <tom@macwright.org>"]
 repository = "https://github.com/tmcw/rust-polyline"
