--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "polyline"
 description = "Encoder and decoder for the Google Encoded Polyline format"
 version = "0.3.0"
 authors = ["Tom MacWright <tom@macwright.org>"]
-repository = "https://github.com/tmcw/rust-polyline"
+repository = "https://github.com/georust/rust-polyline"
 readme = "README.md"
 keywords = ["polyline", "geo"]
 license = "ISC"
