--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ repository = "https://github.com/georust/polyline"
 readme = "README.md"
 keywords = ["polyline", "geo"]
 license = "ISC"
+edition = "2018"
 
 [dev-dependencies]
 rand = "0.5.0"
