--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ keywords = ["polyline", "geo"]
 license = "ISC"
 edition = "2018"
 
+[dependencies]
+geo-types = "0.4.2"
+
 [dev-dependencies]
 rand = "0.5.0"
 criterion = "0.2"
