--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ license = "MIT/Apache-2.0"
 edition = "2018"
 
 [dependencies]
-geo-types = "0.4.2"
+geo-types = "0.4.*"
 
 [dev-dependencies]
 rand = "0.5.0"
