--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ license = "MIT/Apache-2.0"
 edition = "2018"
 
 [dependencies]
-geo-types = ">=0.6, <0.8"
+geo-types = "0.7.8"
 
 [dev-dependencies]
 rand = "0.8.5"
