Switch to structured errors, inline encoding

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ geo-types = "0.7.8"
 rand = "0.8.5"
 criterion = "0.5.1"
 
+[lib]
+bench = false
+
 [[bench]]
 name = "benchmarks"
 harness = false
